[workspace]
resolver = "2"

members = ["crates/fujinoki*", "crates/discord*", "crates/turbopack*", "xtask"]

[workspace.metadata.groups]
turbopack = ["path:crates/turbopack*"]
fujinoki = ["path:crates/fujinoki*"]
discord = ["path:crates/discord*"]

[workspace.lints.clippy]
too_many_arguments = "allow"

# Set the settings for build scripts and proc-macros.
[profile.dev]
debug = true
build-override = { opt-level = 3 }

[profile.release]
lto = "off"

[profile.release-fujinoki]
inherits = "release"
strip = true

[profile.release-discord-api]
inherits = "release-fujinoki"

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
discord-api = { path = "crates/discord-api" }

fujinoki-cli-utils = { path = "crates/fujinoki-cli-utils" }
fujinoki-core = { path = "crates/fujinoki-core" }
fujinoki-dev-server = { path = "crates/fujinoki-dev-server" }
fujinoki-ecmascript-plugins = { path = "crates/fujinoki-ecmascript-plugins" }
fujinoki-interactions-server = { path = "crates/fujinoki-interactions-server" }
fujinoki-node = { path = "crates/fujinoki-node" }
fujinoki-updater = { path = "crates/fujinoki-updater" }
fujinoki-websocket = { path = "crates/fujinoki-websocket" }

turbopack-binding = { path = "crates/turbopack-binding" }

turbopath = { git = "https://github.com/vercel/turborepo.git", tag = "v2.0.14" }
turborepo-ci = { git = "https://github.com/vercel/turborepo.git", tag = "v2.0.14" }
turborepo-repository = { git = "https://github.com/vercel/turborepo.git", tag = "v2.0.14" }

# Be careful when selecting tls backend, including change default tls backend.
reqwest = { version = "=0.11.17", default-features = false }

anyhow = "1.0.69"
async-compression = { version = "0.3.13", default-features = false, features = [
  "gzip",
  "tokio",
] }
async-trait = "0.1.64"
atty = "0.2.14"
bytes = "1.1.0"
camino = { version = "1.1.4", features = ["serde1"] }
clap = "4.5.2"
clap_complete = "4.5.1"
concurrent-queue = "2.5.0"
console = "0.15.5"
console-subscriber = "0.1.8"
criterion = "0.4.0"
crossbeam-channel = "0.5.8"
dunce = "1.0.3"
either = "1.9.0"
futures = "0.3.26"
futures-retry = "0.6.0"
indexmap = "1.9.2"
indoc = "2.0.0"
lazy-regex = "2.5.0"
lazy_static = "1.4.0"
mime = "0.3.16"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
once_cell = "1.17.1"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
pin-project-lite = "0.2.9"
postcard = "1.0.4"
pretty_assertions = "1.3.0"
regex = "1.7.0"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_qs = "0.11.0"
serde_with = "2.3.2"
serde_yaml = "0.9.17"
sourcemap = "8.0.1"
syn = "1.0.107"
tempfile = "3.3.0"
test-case = "3.0.0"
thiserror = "1.0.48"
tokio = "1.25.0"
tokio-util = { version = "0.7.7", features = ["io"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
url = "2.2.2"
which = "4.4.0"
