[package]
name = "fujinoki-cli-utils"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
crossterm = "0.26.0"
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }

turbopack-binding = { workspace = true, features = [
  "__turbo_tasks",
  "__turbo_tasks_fs",
  "__turbopack_core",
  "__turbopack_resolve",
] }

[build-dependencies]
turbopack-binding = { workspace = true, features = ["__turbo_tasks_build"] }
