[package]
name = "fujinoki-ecmascript-plugins"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
lazy-regex = { workspace = true }
serde = { workspace = true }

turbopack-binding = { workspace = true, features = [
  "__turbo_tasks",
  "__turbo_tasks_fs",
  "__turbopack_core",
] }

[build-dependencies]
turbopack-binding = { workspace = true, features = ["__turbo_tasks_build"] }
