[package]
name = "fujinoki-interactions-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
log_request_stats = []
# Allows configuring a specific tls backend for reqwest.
# See top level Cargo.toml for more details.
native-tls = ["discord-api/native-tls"]
rustls-tls = ["discord-api/rustls-tls"]

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
futures = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.9.0"
indexmap = { workspace = true, features = ["serde"] }
mime = { workspace = true }
mime_guess = "2.0.4"
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
socket2 = "0.4.9"
tokio = { workspace = true }
tokio-stream = "0.1.9"
tokio-util = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1.2"

discord-api = { workspace = true }

fujinoki-cli-utils = { workspace = true }

turbopack-binding = { workspace = true, features = [
  "__turbo_tasks",
  "__turbo_tasks_bytes",
  "__turbo_tasks_fs",
  "__turbo_tasks_hash",
  "__turbopack_core",
  "__turbopack_ecmascript",
  "__turbopack_ecmascript_hmr_protocol",
  "__turbopack_node",
  "__feature_auto_hash_map",
] }

[build-dependencies]
turbopack-binding = { workspace = true, features = ["__turbo_tasks_build"] }
