[package]
name = "fujinoki-websocket"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
# Allows configuring a specific tls backend for reqwest.
# See top level Cargo.toml for more details.
native-tls = ["tokio-tungstenite/native-tls", "discord-api/native-tls"]
rustls-tls = [
  "tokio-tungstenite/rustls-tls-native-roots",
  "discord-api/rustls-tls",
]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
libc = "0.2.140"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.9"
tokio-tungstenite = { version = "0.19" }
tokio-util = { workspace = true }
tracing = { workspace = true }

discord-api = { workspace = true }

fujinoki-cli-utils = { workspace = true }
fujinoki-core = { workspace = true }
fujinoki-node = { workspace = true }

turbopack-binding = { workspace = true, features = [
  "__turbo_tasks",
  "__turbo_tasks_bytes",
  "__turbo_tasks_fs",
  "__turbo_tasks_malloc",
  "__turbo_tasks_memory",
  "__turbopack_core",
  "__turbopack_ecmascript",
  "__turbopack_node",
] }
url = { workspace = true }

[build-dependencies]
turbopack-binding = { workspace = true, features = ["__turbo_tasks_build"] }
