[package]
name = "turborepo-binding"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
autobenches = false

[lib]
bench = false

[features]
__turborepo = []
__turborepo_path = ["__turborepo", "turbopath"]
__turborepo_ci = ["__turborepo", "turborepo-ci"]
__turborepo_repository = ["__turborepo", "turborepo-repository"]

[lints]
workspace = true

# used by .github/workflows/update-bindings.yml
[package.metadata]
rev = "68962f8fc0ff8fac6bf67102e08a03008088a8a4"

[dependencies]
turbopath = { optional = true, git = "https://github.com/kijv/turborepo.git", rev = "68962f8fc0ff8fac6bf67102e08a03008088a8a4" }
turborepo-ci = { optional = true, git = "https://github.com/kijv/turborepo.git", rev = "68962f8fc0ff8fac6bf67102e08a03008088a8a4" }
turborepo-repository = { optional = true, git = "https://github.com/kijv/turborepo.git", rev = "68962f8fc0ff8fac6bf67102e08a03008088a8a4" }
